--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,21 @@
 services:
-  postgres:
-    image: postgres
+  postgres: # name of the service we want to create
+    image: postgres # default postgres image
     environment:
       - POSTGRES_PASSWORD=postgrespw
     ports:
-      - 5432:5432
-    volumes: 
-      - pgdata:/var/lib/postgresql/data
+      - 5432:5432 # port to access this service from outside of docker : port to access this service from inside docker
+    volumes:  # since this is a database, we need to tell it to persist data in a volume on our pc
+      - pgdata:/var/lib/postgresql/data 
+  mongo:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=mongopw
+    ports:
+      - 27017:27017
+    volumes:
+      - mongodata:/var/lib/mongodb/data # named volume
 volumes:
   pgdata:
+  mongodata:
