Dockerising the Search service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,19 @@ services:
     depends_on:
       - postgres
       - rabbitmq
+  search-svc:
+    image: youssefhosny98/search-svc:latest 
+    build: 
+      context: .
+      dockerfile: src/SearchService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development 
+      - ASPNETCORE_URLS=http://+:80 
+      - RabbitMq__Host=rabbitmq 
+      - ConnectionStrings__MongoDbConnection=mongodb://root:mongopw@mongo # mongodb = the above mongodb service
+      - AuctionServiceUrl=http://auction-svc
+    ports:
+     - 7002:80 
+    depends_on:
+      - mongo
+      - rabbitmq
