--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,3 +66,13 @@ services:
      - 5000:80
     depends_on:
       - postgres
+  gateway-svc:
+    image: youssefhosny98/gateway-svc:latest
+    build: 
+      context: . 
+      dockerfile: src/GatewayService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Docker # reading from appsettings.Docker.json
+      - ASPNETCORE_URLS=http://+:80
+    ports:
+     - 6001:80
