--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.1",
     "next": "latest",
     "react": "latest",
     "react-countdown": "^2.3.5",
