--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -12,10 +12,12 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
     "next": "latest",
+    "query-string": "^8.1.0",
     "react": "latest",
     "react-countdown": "^2.3.5",
     "react-dom": "latest",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
