--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
     "next": "latest",
+    "next-auth": "^4.23.2",
     "query-string": "^8.1.0",
     "react": "latest",
     "react-countdown": "^2.3.5",
